# Trading-system

./: README.md  app.js  package-lock.json  package.json
backend/: app.js  package-lock.json
backend/model/: instrument.js  order.js  tokenBlacklist.js  user.js
backend/routes/: accountsRoutes.js  authenticationRoutes.js  instrumentsRoutes.js  ordersRoutes.js  usersRoutes.js
deployments/: docker-compose.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  index.js
frontend/src/components/: Home.js
frontend/src/components/Auth/: Login.js  Register.js  styles.css
frontend/src/components/Orders/: AdminDashBoard.js  CancelOrder.js  CreateOrder.js  ModifyOrder.js  SearchOtherOrders.js  SearchOwnOrders.js  TraderDashBoard.js  styles.css
frontend/src/utils/: LocalStorageUtils.js  Logout.js  ProtectedRoute.js
matching-engine/: CMakeLists.txt
matching-engine/include/: KafkaHandler.h  MatchingEngine.h  Order.h  OrderBook.h  Position.h  Trade.h
matching-engine/src/: KafkaHandler.cpp  MatchingEngine.cpp  OrderBook.cpp  main.cpp
model/: order.js  user.js
order-manager/: app.js  dockerfile  package-lock.json  package.json
order-manager/kafka/: client.js  docker-compose.yml
order-manager/model/: tokenBlacklist.js
order-manager/routes/: ordersRoutes.js
routes/: authenticationRoutes.js  ordersRoutes.js
